--- a/Shopify App/View/Base.lproj/Main.storyboard
+++ b/Shopify App/View/Base.lproj/Main.storyboard
@@ -151,6 +151,9 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                                         <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="16"/>
                                                         <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
                                                     </buttonConfiguration>
+                                                    <connections>
+                                                        <action selector="addToCart:" destination="DdB-S0-7HZ" eventType="touchUpInside" id="lGv-HB-8BE"/>
+                                                    </connections>
                                                 </button>
                                                 <color key="tintColor" systemColor="tertiarySystemBackgroundColor"/>
                                             </barButtonItem>
@@ -1368,7 +1371,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PaK-nt-q7w">
-                                <rect key="frame" x="250.33333333333337" y="541.33333333333337" width="128" height="29"/>
+                                <rect key="frame" x="251.33333333333337" y="541.33333333333337" width="127" height="29"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Create your account">
@@ -1382,10 +1385,10 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 <rect key="frame" x="14.666666666666657" y="393.66666666666669" width="363.66666666666674" height="133.66666666666669"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WSz-eW-dQN">
-                                        <rect key="frame" x="0.0" y="0.0" width="363.66666666666669" height="65"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="363.66666666666669" height="52.666666666666664"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="631-Q3-qks">
-                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="49"/>
+                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="36.666666666666664"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                             </textField>
@@ -1400,10 +1403,10 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="woq-GJ-OIP">
-                                        <rect key="frame" x="0.0" y="81" width="363.66666666666669" height="52.666666666666657"/>
+                                        <rect key="frame" x="0.0" y="68.666666666666629" width="363.66666666666669" height="65"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SYN-x6-7nS">
-                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="36.666666666666664"/>
+                                                <rect key="frame" x="8" y="7.9999999999999432" width="347.66666666666669" height="49"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             </textField>
@@ -1469,7 +1472,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dxL-LC-xCT">
-                                <rect key="frame" x="206" y="494" width="163" height="29"/>
+                                <rect key="frame" x="208" y="494" width="161" height="29"/>
                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Already have an account?">
@@ -1592,7 +1595,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                     </tabBar>
                     <connections>
                         <segue destination="h9M-zN-wcL" kind="relationship" relationship="viewControllers" id="YtO-6a-sBU"/>
-                        <segue destination="amV-e0-Max" kind="relationship" relationship="viewControllers" id="rGa-dF-5tG"/>
+                        <segue destination="K0G-1m-Ns6" kind="relationship" relationship="viewControllers" id="rGa-dF-5tG"/>
                         <segue destination="uKv-mc-jgK" kind="relationship" relationship="viewControllers" id="i6t-Gs-auu"/>
                     </connections>
                 </tabBarController>
@@ -1600,7 +1603,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
             </objects>
             <point key="canvasLocation" x="2117" y="-11"/>
         </scene>
-        <!--Category-->
+        <!--Catagory View Controller-->
         <scene sceneID="Pac-Rs-SI5">
             <objects>
                 <viewController storyboardIdentifier="CatagoryViewController" id="amV-e0-Max" customClass="CatagoryViewController" customModule="Shopify_App" customModuleProvider="target" sceneMemberID="viewController">
@@ -1609,7 +1612,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uij-Az-tVP">
-                                <rect key="frame" x="0.0" y="91" width="393" height="60"/>
+                                <rect key="frame" x="0.0" y="135" width="393" height="60"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="6gG-wm-IZP"/>
@@ -1632,7 +1635,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 </cells>
                             </collectionView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="FWN-hA-kLX">
-                                <rect key="frame" x="16" y="159" width="361" height="30"/>
+                                <rect key="frame" x="16" y="203" width="361" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U4r-lM-t0y">
                                         <rect key="frame" x="0.0" y="0.0" width="99" height="30"/>
@@ -1667,7 +1670,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 </constraints>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rQu-fO-cQx">
-                                <rect key="frame" x="0.0" y="189" width="393" height="580"/>
+                                <rect key="frame" x="0.0" y="233" width="393" height="536"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fh7-5h-dhq">
                                     <size key="itemSize" width="244" height="207"/>
@@ -1676,7 +1679,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="efm-o1-Y3l">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="580"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="536"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </activityIndicatorView>
                                 <cells/>
@@ -1697,7 +1700,6 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                             <constraint firstItem="FWN-hA-kLX" firstAttribute="top" secondItem="uij-Az-tVP" secondAttribute="bottom" constant="8" id="yor-5O-ZTu"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Category" image="square.grid.2x2.fill" catalog="system" id="xjF-Aq-FDC"/>
                     <navigationItem key="navigationItem" id="Lle-UO-CNw">
                         <barButtonItem key="rightBarButtonItem" image="search" id="Gyo-hF-cMI"/>
                     </navigationItem>
@@ -1710,7 +1712,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GCN-Qv-TGh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5823.6641221374048" y="716.90140845070425"/>
+            <point key="canvasLocation" x="7289.3129770992364" y="717.6056338028169"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="R14-4v-ekH">
@@ -2191,6 +2193,25 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                 <placeholder placeholderIdentifier="IBFirstResponder" id="etR-cq-BAY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3756.4885496183206" y="851.4084507042254"/>
+        </scene>
+        <!--Category-->
+        <scene sceneID="xv3-15-xaT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="K0G-1m-Ns6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Category" image="square.grid.2x2.fill" catalog="system" id="xjF-Aq-FDC"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UQf-DJ-vPB">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="amV-e0-Max" kind="relationship" relationship="rootViewController" id="Zvx-lY-xeQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IWx-jL-6s7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6362.5954198473282" y="717.6056338028169"/>
         </scene>
     </scenes>
     <resources>
