--- a/Shopify App/View/Base.lproj/Main.storyboard
+++ b/Shopify App/View/Base.lproj/Main.storyboard
@@ -1385,10 +1385,10 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 <rect key="frame" x="14.666666666666657" y="393.66666666666669" width="363.66666666666674" height="133.66666666666669"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WSz-eW-dQN">
-                                        <rect key="frame" x="0.0" y="0.0" width="363.66666666666669" height="52.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="363.66666666666669" height="65"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="631-Q3-qks">
-                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="36.666666666666664"/>
+                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="49"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                             </textField>
@@ -1403,10 +1403,10 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="woq-GJ-OIP">
-                                        <rect key="frame" x="0.0" y="68.666666666666629" width="363.66666666666669" height="65"/>
+                                        <rect key="frame" x="0.0" y="81" width="363.66666666666669" height="52.666666666666657"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SYN-x6-7nS">
-                                                <rect key="frame" x="8" y="7.9999999999999432" width="347.66666666666669" height="49"/>
+                                                <rect key="frame" x="8" y="8" width="347.66666666666669" height="36.666666666666664"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             </textField>
@@ -1612,7 +1612,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uij-Az-tVP">
-                                <rect key="frame" x="0.0" y="135" width="393" height="60"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="60"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="6gG-wm-IZP"/>
@@ -1635,7 +1635,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 </cells>
                             </collectionView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="FWN-hA-kLX">
-                                <rect key="frame" x="16" y="203" width="361" height="30"/>
+                                <rect key="frame" x="16" y="171" width="361" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U4r-lM-t0y">
                                         <rect key="frame" x="0.0" y="0.0" width="99" height="30"/>
@@ -1670,7 +1670,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                 </constraints>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rQu-fO-cQx">
-                                <rect key="frame" x="0.0" y="233" width="393" height="536"/>
+                                <rect key="frame" x="0.0" y="201" width="393" height="568"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fh7-5h-dhq">
                                     <size key="itemSize" width="244" height="207"/>
@@ -1679,7 +1679,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="efm-o1-Y3l">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="536"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="568"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </activityIndicatorView>
                                 <cells/>
@@ -1694,7 +1694,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                             <constraint firstItem="rQu-fO-cQx" firstAttribute="leading" secondItem="DGZ-f4-fYr" secondAttribute="leading" id="KGG-MQ-sUS"/>
                             <constraint firstItem="uij-Az-tVP" firstAttribute="leading" secondItem="DGZ-f4-fYr" secondAttribute="leading" id="Pud-bE-i3N"/>
                             <constraint firstItem="DGZ-f4-fYr" firstAttribute="trailing" secondItem="uij-Az-tVP" secondAttribute="trailing" id="aON-oY-OPp"/>
-                            <constraint firstItem="uij-Az-tVP" firstAttribute="top" secondItem="DGZ-f4-fYr" secondAttribute="top" constant="32" id="hxT-Zw-f2U"/>
+                            <constraint firstItem="uij-Az-tVP" firstAttribute="top" secondItem="DGZ-f4-fYr" secondAttribute="top" id="hxT-Zw-f2U"/>
                             <constraint firstItem="DGZ-f4-fYr" firstAttribute="trailing" secondItem="FWN-hA-kLX" secondAttribute="trailing" constant="16" id="qwV-dh-nFN"/>
                             <constraint firstItem="FWN-hA-kLX" firstAttribute="leading" secondItem="DGZ-f4-fYr" secondAttribute="leading" constant="16" id="xsZ-40-fYO"/>
                             <constraint firstItem="FWN-hA-kLX" firstAttribute="top" secondItem="uij-Az-tVP" secondAttribute="bottom" constant="8" id="yor-5O-ZTu"/>
@@ -2070,11 +2070,11 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m6i-pO-unq">
                                 <rect key="frame" x="16" y="712.33333333333337" width="361" height="35.666666666666629"/>
-                                <color key="backgroundColor" red="0.25530508159999998" green="0.7320202589" blue="0.76225239040000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" name="mainColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Add Address">
                                     <fontDescription key="titleFontDescription" name="Optima-Bold" family="Optima" pointSize="18"/>
-                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="didPressedOnAddAddress:" destination="Ajh-bm-M1N" eventType="touchUpInside" id="7hE-Tf-9Ow"/>
